--- a/public_html/site.css
+++ b/public_html/site.css
@@ -16,7 +16,6 @@ a:hover {
     transition: 0.5s;
     height: 100%;
     width: 100%;
-    border: 2px solid #eee;
 }
 
 .page.transparent {
@@ -27,24 +26,22 @@ a:hover {
 #content {
     width: 100%;
     height: 100%;
-    padding: 20px;
     padding-top: 40px;
     box-sizing: border-box;
 }
 
-#rsvp_page {
+#home_page {
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
-    overflow: scroll;
 }
 
-#rsvp_page iframe {
+#home_page iframe {
   border: none;
   flex-shrink: none;
 }
 
-#rsvp_text {
+#home_page {
     font-family: Hiatus;
     font-size: 80px;
 }
