--- a/public_html/mobile.css
+++ b/public_html/mobile.css
@@ -36,7 +36,7 @@
     .nav_item {
         display: block;
         padding: 10px 10px 10px 20px;
-        transition: 0.5s;
+        border-radius: 0;
     }
 
     .nav_item:hover {
