--- a/site.css
+++ b/site.css
@@ -41,9 +41,29 @@ a:hover {
   flex-shrink: none;
 }
 
+.registry-button {
+  background: #fff;
+  padding: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #000;
+  border-radius: 3px;
+}
+
+#registry_page a {
+  position: relative;
+  top: 40px;
+}
+
 .title_text {
     font-family: Hiatus;
     font-size: 80px;
+}
+
+.sub_text {
+    text-align: left;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #nav {
