--- a/site.css
+++ b/site.css
@@ -67,6 +67,8 @@ a:hover {
 }
 
 #nav {
+    background: #fff;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
     width: 100%;
     animation: nav_in 1s;
     position: fixed;
@@ -96,11 +98,11 @@ a:hover {
     cursor: pointer;
     display: inline-block;
     transition: 0.5s;
-    border-radius: 16px;
+    border-radius: 4px;
 }
 .nav_item:hover, .nav_item a:hover {
     color: #000;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(201, 221, 232, 0.3);
 }
 
 .nav_item a {
